// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`empty state 1`] = `
.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
}

.c3 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c8 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  padding: 56px;
  padding-top: 32px;
  width: 100%;
}

.c10 {
  box-sizing: border-box;
  max-width: 600px;
}

.c11 {
  box-sizing: border-box;
  margin-bottom: 24px;
  text-align: center;
}

.c15 {
  box-sizing: border-box;
  text-align: center;
}

.c16 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  width: 224px;
}

.c16:active {
  opacity: 0.56;
}

.c16:hover,
.c16:focus {
  background: #651FFF;
}

.c16:active {
  background: #354AA4;
}

.c16:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c17 {
  line-height: 1.5;
  border-radius: 4px;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  border: 1px solid;
  box-sizing: border-box;
  background-color: transparent;
  cursor: pointer;
  font-family: inherit;
  font-weight: bold;
  outline: none;
  opacity: 0.56;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  border-color: rgba(255,255,255,0.87);
  color: #FFFFFF;
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  border-color: rgba(255,255,255,0.87);
  color: rgba(255,255,255,0.87);
  margin-left: 24px;
  width: 224px;
}

.c17:hover {
  opacity: 1;
}

.c17:active {
  opacity: 0.24;
}

.c17 > span {
  display: flex;
  align-items: center;
  justify-content: center;
}

.c17:hover,
.c17:focus {
  border-color: #FFFFFF;
  color: #FFFFFF;
}

.c17:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c17:hover,
.c17:focus {
  border-color: #FFFFFF;
  color: #FFFFFF;
}

.c1 {
  display: flex;
}

.c4 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c9 {
  display: flex;
  align-items: center;
  justify-content: center;
}

.c12 {
  display: block;
  outline: none;
  height: 160px;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 24px;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
}

.c13 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 700;
  font-size: 24px;
  line-height: 24px;
  margin-bottom: 8px;
}

.c14 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 14px;
  font-weight: 400;
}

.c5 {
  flex-shrink: 0;
  border-bottom: 1px solid #1C254D;
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c7 {
  white-space: nowrap;
}

.c2 {
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c2::after {
  content: ' ';
  padding-bottom: 24px;
}

<div>
  <div
    class="c0 c1 c2"
  >
    <div
      class="c3 c4 c5"
    >
      <div
        class="c6 c7"
      >
        Servers
      </div>
    </div>
    <div
      class="c8 c9 sc-jSMfEi c8"
      width="100%"
    >
      <div
        class="c10"
      >
        <div
          class="c11"
        >
          <img
            class="c12"
            height="160px"
            src="file_stub"
          />
          <div
            class="c13"
            font-size="24"
            font-weight="700"
          >
            Add your first server to Teleport
          </div>
          <div
            class="c14"
            font-size="14"
            font-weight="400"
            style="opacity: 0.6;"
          >
            Teleport Server Access consolidates SSH access across all environments.
          </div>
        </div>
        <div
          class="c15"
        >
          <a
            href="/web/discover"
            style="text-decoration: none;"
          >
            <button
              class="c16"
              kind="primary"
              width="224px"
            >
              Add 
              server
            </button>
          </a>
          <a
            class="c17"
            href="https://goteleport.com/docs/server-access/getting-started/"
            rel="noreferrer"
            target="_blank"
            width="224px"
          >
            View Documentation
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`failed 1`] = `
.c8 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  background: #f50057;
  color: #FFFFFF;
}

.c8 a {
  color: #FFFFFF;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
}

.c3 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c10 {
  box-sizing: border-box;
  width: 100%;
}

.c11 {
  box-sizing: border-box;
}

.c13 {
  box-sizing: border-box;
  margin-right: 16px;
  width: 100%;
}

.c33 {
  box-sizing: border-box;
  margin-right: 8px;
}

.c29 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #2C3A73;
  border: 1px solid #1C254D;
  opacity: .87;
  color: rgba(255,255,255,0.87);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
  height: 24px;
}

.c29:active {
  opacity: 0.56;
}

.c29:hover,
.c29:focus {
  background: #2C3A73;
  border: 1px solid rgba(255,255,255,0.1);
  opacity: 1;
}

.c29:active {
  opacity: 0.24;
}

.c29:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c24 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
}

.c30 {
  display: inline-block;
  transition: color 0.3s;
  margin-left: 8px;
  margin-right: -8px;
  color: rgba(255,255,255,0.56);
  font-size: 14px;
}

.c35 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
  font-size: 16px;
}

.c1 {
  display: flex;
}

.c4 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c12 {
  display: flex;
  align-items: center;
}

.c32 {
  display: flex;
  justify-content: flex-end;
}

.c27 {
  box-sizing: border-box;
  border-radius: 100px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  min-height: 16px;
  line-height: 1.4;
  font-size: 10px;
  font-weight: 500;
  padding: 0 8px;
  background-color: #111B48;
  color: rgba(255,255,255,0.87);
  margin-right: 4px;
  margin-bottom: 4px;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
}

.c22 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 12px;
  line-height: 24px;
}

.c25 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin-right: 4px;
  color: #FFFFFF;
}

.c5 {
  flex-shrink: 0;
  border-bottom: 1px solid #1C254D;
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c7 {
  white-space: nowrap;
}

.c2 {
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c2::after {
  content: ' ';
  padding-bottom: 24px;
}

.c26 {
  background: #222C59;
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-collapse: collapse;
  border-spacing: 0;
  font-size: 12px;
  width: 100%;
}

.c26 > thead > tr > th,
.c26 > tbody > tr > th,
.c26 > tfoot > tr > th,
.c26 > thead > tr > td,
.c26 > tbody > tr > td,
.c26 > tfoot > tr > td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c26 > thead > tr > th:first-child,
.c26 > tbody > tr > th:first-child,
.c26 > tfoot > tr > th:first-child,
.c26 > thead > tr > td:first-child,
.c26 > tbody > tr > td:first-child,
.c26 > tfoot > tr > td:first-child {
  padding-left: 24px;
}

.c26 > thead > tr > th:last-child,
.c26 > tbody > tr > th:last-child,
.c26 > tfoot > tr > th:last-child,
.c26 > thead > tr > td:last-child,
.c26 > tbody > tr > td:last-child,
.c26 > tfoot > tr > td:last-child {
  padding-right: 24px;
}

.c26 > tbody > tr > td {
  vertical-align: baseline;
}

.c26 > thead > tr > th {
  background: #111B48;
  color: #FFFFFF;
  cursor: pointer;
  font-size: 10px;
  font-weight: 400;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  opacity: 0.75;
  text-transform: uppercase;
  white-space: nowrap;
}

.c26 > thead > tr > th .c23 {
  font-weight: bold;
  font-size: 8px;
  margin-left: 8px;
}

.c26 > tbody > tr > td {
  color: rgba(255,255,255,0.87);
  line-height: 16px;
}

.c26 tbody tr {
  border-bottom: 1px solid #1C254D;
}

.c26 tbody tr:hover {
  background-color: rgb(37,49,98);
}

.c9 {
  padding: 16px 24px;
  display: flex;
  height: 24px;
  flex-shrink: 0;
  align-items: center;
  justify-content: space-between;
  background: #222C59;
  border-top-left-radius: 8px;
  border-top-right-radius: 8px;
}

.c31 {
  padding: 16px 24px;
  display: flex;
  height: 24px;
  flex-shrink: 0;
  align-items: center;
  justify-content: space-between;
  background: #222C59;
  border-bottom-left-radius: 8px;
  border-bottom-right-radius: 8px;
}

.c28 {
  cursor: pointer;
}

.c34 {
  background: none;
  border: none;
  cursor: pointer;
  margin-left: 0;
  margin-right: 0;
}

.c34 .c23 {
  font-size: 20px;
  transition: all 0.3s;
  opacity: 0.5;
}

.c34:hover .c23,
.c34:focus .c23 {
  opacity: 1;
}

.c34:disabled {
  cursor: default;
}

.c34:disabled .c23 {
  opacity: 0.1;
}

.c36 {
  background: none;
  border: none;
  cursor: pointer;
  margin-left: 0;
}

.c36 .c23 {
  font-size: 20px;
  transition: all 0.3s;
  opacity: 0.5;
}

.c36:hover .c23,
.c36:focus .c23 {
  opacity: 1;
}

.c36:disabled {
  cursor: default;
}

.c36:disabled .c23 {
  opacity: 0.1;
}

.c16 {
  position: absolute;
  height: 100%;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  background: #2C3A73;
  border-radius: 200px;
}

.c14 {
  position: relative;
  display: flex;
  overflow: hidden;
  width: 100%;
  border-radius: 200px;
  height: 32px;
  background: #111B48;
}

.c15 {
  border: none;
  outline: none;
  box-sizing: border-box;
  height: 100%;
  font-size: 12px;
  width: 100%;
  transition: all 0.2s;
  padding-right: 184px;
  color: rgba(255,255,255,0.87);
  background: #111B48;
  padding-left: 16px;
  padding-right: 16px;
}

.c15:hover,
.c15:focus,
.c15:active {
  background: #1C254D;
  box-shadow: inset 0 2px 4px rgba(0,0,0,.24);
  color: rgba(255,255,255,0.87);
}

.c15::placeholder {
  color: rgba(255,255,255,0.24);
  font-size: 12px;
}

.c18 {
  position: relative;
  display: flex;
  align-items: center;
  cursor: pointer;
}

.c21 {
  width: 32px;
  height: 12px;
  border-radius: 12px;
  background: #222C59;
  cursor: inherit;
  flex-shrink: 0;
}

.c21:before {
  content: '';
  position: absolute;
  top: 50%;
  transform: translate(0,-50%);
  width: 16px;
  height: 16px;
  border-radius: 16px;
  background: #651FFF;
}

.c19 {
  opacity: 0;
  position: absolute;
  cursor: inherit;
}

.c19:checked + .c20 {
  background: #512FC9;
}

.c19:checked + .c20:before {
  transform: translate(16px,-50%);
}

.c19:disabled + .c20 {
  background: #222C59;
}

.c19:disabled + .c20:before {
  background: #455a64;
}

.c17 {
  display: flex;
  align-items: center;
  justify-content: space-around;
  padding-right: 16px;
  padding-left: 16px;
  width: 120px;
}

<div
  class="c0 c1 c2"
>
  <div
    class="c3 c4 c5"
  >
    <div
      class="c6 c7"
    >
      Servers
    </div>
  </div>
  <div
    class="c8"
    kind="danger"
  >
    <div>
      some error message
    </div>
  </div>
  <form
    class="c9"
  >
    <div
      class="c10 c4"
      width="100%"
    >
      <div
        class="c11 c12"
        style="width: 70%;"
      >
        <div
          class="c13"
          width="100%"
        >
          <div
            class="c14"
          >
            <input
              class="c15"
              placeholder="SEARCH..."
              value=""
            />
            <div
              class="c16"
            >
              <div
                class="c17"
              >
                <label
                  class="c18"
                >
                  <input
                    class="c19"
                    type="checkbox"
                  />
                  <div
                    class="c20 c21"
                  />
                </label>
                <div
                  class="c22"
                >
                  Advanced
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          style="line-height: 0px;"
        >
          <span
            class="c23 c24 icon icon-info_outline "
            color="light"
            style="cursor: pointer; font-size: 20px;"
          />
        </div>
      </div>
      <div
        class="c11 c1"
      >
        <div
          class="c25"
          color="primary.contrastText"
        >
          SHOWING 
          <strong>
            1
          </strong>
           - 
          <strong>
            7
          </strong>
           of
           
          <strong>
            7
          </strong>
        </div>
      </div>
    </div>
  </form>
  <table
    class="c26"
  >
    <thead>
      <tr>
        <th>
          <a>
            Hostname
            <span
              class="c23 c24 icon icon-chevron-up "
              color="light"
              title="sort items asc"
            />
          </a>
        </th>
        <th
          style="cursor: default;"
        >
          Address
        </th>
        <th
          style="cursor: default;"
        >
          Labels
        </th>
        <th
          style="cursor: default;"
        />
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          fujedu
        </td>
        <td>
          172.10.1.20:3022
        </td>
        <td>
          <div
            class="c27 c28"
            kind="secondary"
          >
            cluster: one
          </div>
          <div
            class="c27 c28"
            kind="secondary"
          >
            kernel: 4.15.0-51-generic
          </div>
        </td>
        <td
          align="right"
        >
          <button
            class="c29"
            height="24px"
            kind="border"
          >
            CONNECT
            <span
              class="c23 c30 icon icon-caret-down "
              color="text.secondary"
              font-size="2"
            />
          </button>
        </td>
      </tr>
      <tr>
        <td>
          facuzguv
        </td>
        <td>
          172.10.1.1:3022
        </td>
        <td>
          <div
            class="c27 c28"
            kind="secondary"
          >
            cluster: one
          </div>
          <div
            class="c27 c28"
            kind="secondary"
          >
            kernel: 4.15.0-51-generic
          </div>
        </td>
        <td
          align="right"
        >
          <button
            class="c29"
            height="24px"
            kind="border"
          >
            CONNECT
            <span
              class="c23 c30 icon icon-caret-down "
              color="text.secondary"
              font-size="2"
            />
          </button>
        </td>
      </tr>
      <tr>
        <td>
          duzsevkig
        </td>
        <td>
          172.10.1.1:3022
        </td>
        <td>
          <div
            class="c27 c28"
            kind="secondary"
          >
            cluster: one
          </div>
          <div
            class="c27 c28"
            kind="secondary"
          >
            kernel: 4.15.0-51-generic
          </div>
        </td>
        <td
          align="right"
        >
          <button
            class="c29"
            height="24px"
            kind="border"
          >
            CONNECT
            <span
              class="c23 c30 icon icon-caret-down "
              color="text.secondary"
              font-size="2"
            />
          </button>
        </td>
      </tr>
      <tr>
        <td>
          kuhinur
        </td>
        <td>
          172.10.1.1:3022
        </td>
        <td>
          <div
            class="c27 c28"
            kind="secondary"
          >
            cluster: one
          </div>
          <div
            class="c27 c28"
            kind="secondary"
          >
            kernel: 4.15.0-51-generic
          </div>
        </td>
        <td
          align="right"
        >
          <button
            class="c29"
            height="24px"
            kind="border"
          >
            CONNECT
            <span
              class="c23 c30 icon icon-caret-down "
              color="text.secondary"
              font-size="2"
            />
          </button>
        </td>
      </tr>
      <tr>
        <td>
          zebpecda
        </td>
        <td>
          172.10.1.1:3022
        </td>
        <td>
          <div
            class="c27 c28"
            kind="secondary"
          >
            cluster: one
          </div>
          <div
            class="c27 c28"
            kind="secondary"
          >
            kernel: 4.15.0-51-generic
          </div>
        </td>
        <td
          align="right"
        >
          <button
            class="c29"
            height="24px"
            kind="border"
          >
            CONNECT
            <span
              class="c23 c30 icon icon-caret-down "
              color="text.secondary"
              font-size="2"
            />
          </button>
        </td>
      </tr>
      <tr>
        <td>
          zebpecda
        </td>
        <td>
          <span
            style="cursor: default;"
            title="This node is connected to cluster through reverse tunnel"
          >
            ⟵ tunnel
          </span>
        </td>
        <td>
          <div
            class="c27 c28"
            kind="secondary"
          >
            cluster: one
          </div>
          <div
            class="c27 c28"
            kind="secondary"
          >
            kernel: 4.15.0-51-generic
          </div>
        </td>
        <td
          align="right"
        >
          <button
            class="c29"
            height="24px"
            kind="border"
          >
            CONNECT
            <span
              class="c23 c30 icon icon-caret-down "
              color="text.secondary"
              font-size="2"
            />
          </button>
        </td>
      </tr>
      <tr>
        <td>
          zebpecda
        </td>
        <td>
          <span
            style="cursor: default;"
            title="This node is connected to cluster through reverse tunnel"
          >
            ⟵ tunnel
          </span>
        </td>
        <td>
          <div
            class="c27 c28"
            kind="secondary"
          >
            cluster: one
          </div>
          <div
            class="c27 c28"
            kind="secondary"
          >
            kernel: 4.15.0-51-generic
          </div>
        </td>
        <td
          align="right"
        >
          <button
            class="c29"
            height="24px"
            kind="border"
          >
            CONNECT
            <span
              class="c23 c30 icon icon-caret-down "
              color="text.secondary"
              font-size="2"
            />
          </button>
        </td>
      </tr>
    </tbody>
  </table>
  <nav
    class="c31"
  >
    <div
      class="c10 c32"
      width="100%"
    >
      <div
        class="c33 c12"
      />
      <div
        class="c11 c1"
      >
        <button
          class="c34"
          disabled=""
          title="Previous page"
        >
          <span
            class="c23 c35 icon icon-arrow-left-circle "
            color="light"
            font-size="3"
          />
        </button>
        <button
          class="c36"
          disabled=""
          title="Next page"
        >
          <span
            class="c23 c35 icon icon-arrow-right-circle "
            color="light"
            font-size="3"
          />
        </button>
      </div>
    </div>
  </nav>
</div>
`;

exports[`loaded 1`] = `
.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
}

.c3 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c8 {
  box-sizing: border-box;
}

.c10 {
  box-sizing: border-box;
  margin-right: 16px;
  width: 280px;
}

.c16 {
  box-sizing: border-box;
  width: 100%;
}

.c17 {
  box-sizing: border-box;
  margin-right: 16px;
  width: 100%;
}

.c37 {
  box-sizing: border-box;
  margin-right: 8px;
}

.c14 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  width: 240px;
}

.c14:active {
  opacity: 0.56;
}

.c14:hover,
.c14:focus {
  background: #651FFF;
}

.c14:active {
  background: #354AA4;
}

.c14:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c33 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #2C3A73;
  border: 1px solid #1C254D;
  opacity: .87;
  color: rgba(255,255,255,0.87);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
  height: 24px;
}

.c33:active {
  opacity: 0.56;
}

.c33:hover,
.c33:focus {
  background: #2C3A73;
  border: 1px solid rgba(255,255,255,0.1);
  opacity: 1;
}

.c33:active {
  opacity: 0.24;
}

.c33:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c28 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
}

.c34 {
  display: inline-block;
  transition: color 0.3s;
  margin-left: 8px;
  margin-right: -8px;
  color: rgba(255,255,255,0.56);
  font-size: 14px;
}

.c39 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
  font-size: 16px;
}

.c1 {
  display: flex;
}

.c4 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c9 {
  display: flex;
  align-items: center;
}

.c36 {
  display: flex;
  justify-content: flex-end;
}

.c31 {
  box-sizing: border-box;
  border-radius: 100px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  min-height: 16px;
  line-height: 1.4;
  font-size: 10px;
  font-weight: 500;
  padding: 0 8px;
  background-color: #111B48;
  color: rgba(255,255,255,0.87);
  margin-right: 4px;
  margin-bottom: 4px;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
}

.c26 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 12px;
  line-height: 24px;
}

.c29 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin-right: 4px;
  color: #FFFFFF;
}

.c5 {
  flex-shrink: 0;
  border-bottom: 1px solid #1C254D;
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c7 {
  white-space: nowrap;
}

.c2 {
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c2::after {
  content: ' ';
  padding-bottom: 24px;
}

.c11 {
  align-items: center;
  height: 32px;
  border-radius: 4px;
  border: 1px solid rgba(255,255,255,0.24);
}

.c12 {
  opacity: 0.75;
  font-size: 11px;
  font-weight: 500;
  padding: 0 8px;
  border-bottom-left-radius: 4px;
  border-top-left-radius: 4px;
}

.c13 {
  appearance: none;
  border: none;
  box-sizing: border-box;
  border-radius: 0 4px 4px 0;
  display: block;
  outline: none;
  width: 100%;
  height: 100%;
  box-shadow: none;
  padding-left: 8px;
  font-size: 12px;
  background-color: #222C59;
  color: rgba(255,255,255,0.87);
}

.c13::-ms-clear {
  display: none;
}

.c13:read-only {
  cursor: not-allowed;
}

.c13::placeholder {
  opacity: 1;
  color: rgba(255,255,255,0.24);
  font-size: 12px;
}

.c13:hover,
.c13:focus {
  background: #2C3A73;
}

.c30 {
  background: #222C59;
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-collapse: collapse;
  border-spacing: 0;
  font-size: 12px;
  width: 100%;
}

.c30 > thead > tr > th,
.c30 > tbody > tr > th,
.c30 > tfoot > tr > th,
.c30 > thead > tr > td,
.c30 > tbody > tr > td,
.c30 > tfoot > tr > td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c30 > thead > tr > th:first-child,
.c30 > tbody > tr > th:first-child,
.c30 > tfoot > tr > th:first-child,
.c30 > thead > tr > td:first-child,
.c30 > tbody > tr > td:first-child,
.c30 > tfoot > tr > td:first-child {
  padding-left: 24px;
}

.c30 > thead > tr > th:last-child,
.c30 > tbody > tr > th:last-child,
.c30 > tfoot > tr > th:last-child,
.c30 > thead > tr > td:last-child,
.c30 > tbody > tr > td:last-child,
.c30 > tfoot > tr > td:last-child {
  padding-right: 24px;
}

.c30 > tbody > tr > td {
  vertical-align: baseline;
}

.c30 > thead > tr > th {
  background: #111B48;
  color: #FFFFFF;
  cursor: pointer;
  font-size: 10px;
  font-weight: 400;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  opacity: 0.75;
  text-transform: uppercase;
  white-space: nowrap;
}

.c30 > thead > tr > th .c27 {
  font-weight: bold;
  font-size: 8px;
  margin-left: 8px;
}

.c30 > tbody > tr > td {
  color: rgba(255,255,255,0.87);
  line-height: 16px;
}

.c30 tbody tr {
  border-bottom: 1px solid #1C254D;
}

.c30 tbody tr:hover {
  background-color: rgb(37,49,98);
}

.c15 {
  padding: 16px 24px;
  display: flex;
  height: 24px;
  flex-shrink: 0;
  align-items: center;
  justify-content: space-between;
  background: #222C59;
  border-top-left-radius: 8px;
  border-top-right-radius: 8px;
}

.c35 {
  padding: 16px 24px;
  display: flex;
  height: 24px;
  flex-shrink: 0;
  align-items: center;
  justify-content: space-between;
  background: #222C59;
  border-bottom-left-radius: 8px;
  border-bottom-right-radius: 8px;
}

.c32 {
  cursor: pointer;
}

.c38 {
  background: none;
  border: none;
  cursor: pointer;
  margin-left: 0;
  margin-right: 0;
}

.c38 .c27 {
  font-size: 20px;
  transition: all 0.3s;
  opacity: 0.5;
}

.c38:hover .c27,
.c38:focus .c27 {
  opacity: 1;
}

.c38:disabled {
  cursor: default;
}

.c38:disabled .c27 {
  opacity: 0.1;
}

.c40 {
  background: none;
  border: none;
  cursor: pointer;
  margin-left: 0;
}

.c40 .c27 {
  font-size: 20px;
  transition: all 0.3s;
  opacity: 0.5;
}

.c40:hover .c27,
.c40:focus .c27 {
  opacity: 1;
}

.c40:disabled {
  cursor: default;
}

.c40:disabled .c27 {
  opacity: 0.1;
}

.c20 {
  position: absolute;
  height: 100%;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  background: #2C3A73;
  border-radius: 200px;
}

.c18 {
  position: relative;
  display: flex;
  overflow: hidden;
  width: 100%;
  border-radius: 200px;
  height: 32px;
  background: #111B48;
}

.c19 {
  border: none;
  outline: none;
  box-sizing: border-box;
  height: 100%;
  font-size: 12px;
  width: 100%;
  transition: all 0.2s;
  padding-right: 184px;
  color: rgba(255,255,255,0.87);
  background: #111B48;
  padding-left: 16px;
  padding-right: 16px;
}

.c19:hover,
.c19:focus,
.c19:active {
  background: #1C254D;
  box-shadow: inset 0 2px 4px rgba(0,0,0,.24);
  color: rgba(255,255,255,0.87);
}

.c19::placeholder {
  color: rgba(255,255,255,0.24);
  font-size: 12px;
}

.c22 {
  position: relative;
  display: flex;
  align-items: center;
  cursor: pointer;
}

.c25 {
  width: 32px;
  height: 12px;
  border-radius: 12px;
  background: #222C59;
  cursor: inherit;
  flex-shrink: 0;
}

.c25:before {
  content: '';
  position: absolute;
  top: 50%;
  transform: translate(0,-50%);
  width: 16px;
  height: 16px;
  border-radius: 16px;
  background: #651FFF;
}

.c23 {
  opacity: 0;
  position: absolute;
  cursor: inherit;
}

.c23:checked + .c24 {
  background: #512FC9;
}

.c23:checked + .c24:before {
  transform: translate(16px,-50%);
}

.c23:disabled + .c24 {
  background: #222C59;
}

.c23:disabled + .c24:before {
  background: #455a64;
}

.c21 {
  display: flex;
  align-items: center;
  justify-content: space-around;
  padding-right: 16px;
  padding-left: 16px;
  width: 120px;
}

<div
  class="c0 c1 c2"
>
  <div
    class="c3 c4 c5"
  >
    <div
      class="c6 c7"
    >
      Servers
    </div>
    <div
      class="c8 c9"
    >
      <div
        class="c10 c1 c11"
        width="280px"
      >
        <div
          class="c12"
        >
          SSH:
        </div>
        <input
          class="c13"
          color="text.primary"
          placeholder="login@host:port"
        />
      </div>
      <a
        href="/web/discover"
        style="text-decoration: none;"
      >
        <button
          class="c14"
          kind="primary"
          title=""
          width="240px"
        >
          Add 
          server
        </button>
      </a>
    </div>
  </div>
  <form
    class="c15"
  >
    <div
      class="c16 c4"
      width="100%"
    >
      <div
        class="c8 c9"
        style="width: 70%;"
      >
        <div
          class="c17"
          width="100%"
        >
          <div
            class="c18"
          >
            <input
              class="c19"
              placeholder="SEARCH..."
              value=""
            />
            <div
              class="c20"
            >
              <div
                class="c21"
              >
                <label
                  class="c22"
                >
                  <input
                    class="c23"
                    type="checkbox"
                  />
                  <div
                    class="c24 c25"
                  />
                </label>
                <div
                  class="c26"
                >
                  Advanced
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          style="line-height: 0px;"
        >
          <span
            class="c27 c28 icon icon-info_outline "
            color="light"
            style="cursor: pointer; font-size: 20px;"
          />
        </div>
      </div>
      <div
        class="c8 c1"
      >
        <div
          class="c29"
          color="primary.contrastText"
        >
          SHOWING 
          <strong>
            1
          </strong>
           - 
          <strong>
            7
          </strong>
           of
           
          <strong>
            7
          </strong>
        </div>
      </div>
    </div>
  </form>
  <table
    class="c30"
  >
    <thead>
      <tr>
        <th>
          <a>
            Hostname
            <span
              class="c27 c28 icon icon-chevron-up "
              color="light"
              title="sort items asc"
            />
          </a>
        </th>
        <th
          style="cursor: default;"
        >
          Address
        </th>
        <th
          style="cursor: default;"
        >
          Labels
        </th>
        <th
          style="cursor: default;"
        />
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          fujedu
        </td>
        <td>
          172.10.1.20:3022
        </td>
        <td>
          <div
            class="c31 c32"
            kind="secondary"
          >
            cluster: one
          </div>
          <div
            class="c31 c32"
            kind="secondary"
          >
            kernel: 4.15.0-51-generic
          </div>
        </td>
        <td
          align="right"
        >
          <button
            class="c33"
            height="24px"
            kind="border"
          >
            CONNECT
            <span
              class="c27 c34 icon icon-caret-down "
              color="text.secondary"
              font-size="2"
            />
          </button>
        </td>
      </tr>
      <tr>
        <td>
          facuzguv
        </td>
        <td>
          172.10.1.1:3022
        </td>
        <td>
          <div
            class="c31 c32"
            kind="secondary"
          >
            cluster: one
          </div>
          <div
            class="c31 c32"
            kind="secondary"
          >
            kernel: 4.15.0-51-generic
          </div>
        </td>
        <td
          align="right"
        >
          <button
            class="c33"
            height="24px"
            kind="border"
          >
            CONNECT
            <span
              class="c27 c34 icon icon-caret-down "
              color="text.secondary"
              font-size="2"
            />
          </button>
        </td>
      </tr>
      <tr>
        <td>
          duzsevkig
        </td>
        <td>
          172.10.1.1:3022
        </td>
        <td>
          <div
            class="c31 c32"
            kind="secondary"
          >
            cluster: one
          </div>
          <div
            class="c31 c32"
            kind="secondary"
          >
            kernel: 4.15.0-51-generic
          </div>
        </td>
        <td
          align="right"
        >
          <button
            class="c33"
            height="24px"
            kind="border"
          >
            CONNECT
            <span
              class="c27 c34 icon icon-caret-down "
              color="text.secondary"
              font-size="2"
            />
          </button>
        </td>
      </tr>
      <tr>
        <td>
          kuhinur
        </td>
        <td>
          172.10.1.1:3022
        </td>
        <td>
          <div
            class="c31 c32"
            kind="secondary"
          >
            cluster: one
          </div>
          <div
            class="c31 c32"
            kind="secondary"
          >
            kernel: 4.15.0-51-generic
          </div>
        </td>
        <td
          align="right"
        >
          <button
            class="c33"
            height="24px"
            kind="border"
          >
            CONNECT
            <span
              class="c27 c34 icon icon-caret-down "
              color="text.secondary"
              font-size="2"
            />
          </button>
        </td>
      </tr>
      <tr>
        <td>
          zebpecda
        </td>
        <td>
          172.10.1.1:3022
        </td>
        <td>
          <div
            class="c31 c32"
            kind="secondary"
          >
            cluster: one
          </div>
          <div
            class="c31 c32"
            kind="secondary"
          >
            kernel: 4.15.0-51-generic
          </div>
        </td>
        <td
          align="right"
        >
          <button
            class="c33"
            height="24px"
            kind="border"
          >
            CONNECT
            <span
              class="c27 c34 icon icon-caret-down "
              color="text.secondary"
              font-size="2"
            />
          </button>
        </td>
      </tr>
      <tr>
        <td>
          zebpecda
        </td>
        <td>
          <span
            style="cursor: default;"
            title="This node is connected to cluster through reverse tunnel"
          >
            ⟵ tunnel
          </span>
        </td>
        <td>
          <div
            class="c31 c32"
            kind="secondary"
          >
            cluster: one
          </div>
          <div
            class="c31 c32"
            kind="secondary"
          >
            kernel: 4.15.0-51-generic
          </div>
        </td>
        <td
          align="right"
        >
          <button
            class="c33"
            height="24px"
            kind="border"
          >
            CONNECT
            <span
              class="c27 c34 icon icon-caret-down "
              color="text.secondary"
              font-size="2"
            />
          </button>
        </td>
      </tr>
      <tr>
        <td>
          zebpecda
        </td>
        <td>
          <span
            style="cursor: default;"
            title="This node is connected to cluster through reverse tunnel"
          >
            ⟵ tunnel
          </span>
        </td>
        <td>
          <div
            class="c31 c32"
            kind="secondary"
          >
            cluster: one
          </div>
          <div
            class="c31 c32"
            kind="secondary"
          >
            kernel: 4.15.0-51-generic
          </div>
        </td>
        <td
          align="right"
        >
          <button
            class="c33"
            height="24px"
            kind="border"
          >
            CONNECT
            <span
              class="c27 c34 icon icon-caret-down "
              color="text.secondary"
              font-size="2"
            />
          </button>
        </td>
      </tr>
    </tbody>
  </table>
  <nav
    class="c35"
  >
    <div
      class="c16 c36"
      width="100%"
    >
      <div
        class="c37 c9"
      />
      <div
        class="c8 c1"
      >
        <button
          class="c38"
          disabled=""
          title="Previous page"
        >
          <span
            class="c27 c39 icon icon-arrow-left-circle "
            color="light"
            font-size="3"
          />
        </button>
        <button
          class="c40"
          disabled=""
          title="Next page"
        >
          <span
            class="c27 c39 icon icon-arrow-right-circle "
            color="light"
            font-size="3"
          />
        </button>
      </div>
    </div>
  </nav>
</div>
`;

exports[`readonly empty state 1`] = `
.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
}

.c3 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c8 {
  box-sizing: border-box;
  border-radius: 12px;
  color: rgba(255,255,255,0.87);
  margin-left: auto;
  margin-right: auto;
  max-width: 664px;
  padding: 56px;
  text-align: center;
}

.c1 {
  display: flex;
}

.c4 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
}

.c9 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 28px;
  line-height: 32px;
  margin-bottom: 16px;
}

.c10 {
  overflow: hidden;
  text-overflow: ellipsis;
}

.c11 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
}

.c5 {
  flex-shrink: 0;
  border-bottom: 1px solid #1C254D;
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c7 {
  white-space: nowrap;
}

.c2 {
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c2::after {
  content: ' ';
  padding-bottom: 24px;
}

<div>
  <div
    class="c0 c1 c2"
  >
    <div
      class="c3 c4 c5"
    >
      <div
        class="c6 c7"
      >
        Servers
      </div>
    </div>
    <div
      class="c8"
      color="text.primary"
    >
      <div
        class="c9"
      >
        No Servers Found
      </div>
      <div
        class="c10"
      >
        Either there are no 
        servers
         in the "
        <span
          class="c11"
        >
          im-a-cluster
        </span>
        " cluster, or your roles don't grant you access.
      </div>
    </div>
  </div>
</div>
`;
